--- a/templates/show.htm
+++ b/templates/show.htm
@@ -30,6 +30,7 @@ button {
 {% endfor %}
 {% endif %}
 </div>
+<p align="right">Scripted by <a href="https://github.com/geekdinazor">@geekdinazor</a></p>
 </body>
 </html>
 
